--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "start:dev": "nodemon dist/index.js",
     "build:dev": "tsc --watch --preserveWatchOutput",
     "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
+    "test:watch": "npm run test -- --watch",
+    "test:watch-all": "npm run test -- --watchAll"
   },
   "keywords": [],
   "author": "Nilesh Parkhe <parkhenilesh@gmail.com>",
@@ -17,9 +19,14 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "jest": "^26.0.1",
+    "ts-jest": "^25.5.1",
     "@types/config": "0.0.36",
     "@types/express": "^4.17.6",
+    "@types/supertest": "^2.0.9",
     "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "cross-env": "^7.0.2",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   }
 }
